# ndi-mod

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.sh
dep/: norns
dep/ndi/: Processing.NDI.Lib.Licenses.txt
docs/: Developing.md  Scripting.md  User's Guide.md
mod/examples/: send_image.lua
mod/lib/: mod.lua
src/: CMakeLists.txt  ndi_mod.cpp  ndi_mod.h  ndi_mod_audio.cpp  ndi_mod_audio.h  weaver_image.h
